--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+    "autoload": {
+        "psr-4": {
+            "App\\": "/Route"
+        }
+    },
     "require": {
         "vlucas/phpdotenv": "^5.4"
     }
